# haskell-tools

./: .gitignore  cabal.project  flake.nix  loop.sh  loop2.sh  paytm.sh  razorpay.sh  stack.yaml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: haskell-tools-ast-1.1.1.0-inplace.conf  haskell-tools-prettyprint-1.1.1.0-inplace.conf  haskell-tools-rewrite-1.1.1.0-inplace.conf  package.cache
src/ast/Language/Haskell/Tools/AST/Representation/: Decls.hs
src/backend-ghc/Language/Haskell/Tools/BackendGHC/: Binds.hs  Decls.hs  Exprs.hs  GHCUtils.hs  Kinds.hs  Modules.hs  Names.hs  Patterns.hs  Stmts.hs  TH.hs  Types.hs  Utils.hs
src/builtin-refactorings/: haskell-tools-builtin-refactorings.cabal
src/builtin-refactorings/Language/Haskell/Tools/Refactor/: Builtin.hs
src/builtin-refactorings/Language/Haskell/Tools/Refactor/Builtin/: AddMaybe.hs  DoPureReturnToLet.hs  EPNG.hs  FlowCtxt.hs  GenerateTypeSignature.hs  OrganizeExtensions.hs  Ref1.hs
src/builtin-refactorings/Language/Haskell/Tools/Refactor/Builtin/ExtensionOrganizer/Checkers/: DerivingsChecker.hs
src/cli/: haskell-tools-cli.cabal
src/daemon/: haskell-tools-daemon.cabal
src/daemon/Language/Haskell/Tools/Daemon/: GetModules.hs
src/debug/: haskell-tools-debug.cabal
src/debug/Language/Haskell/Tools/: Debug.hs
src/gateway/: haskell-tools-gateway.cabal
src/gateway/Language/Haskell/Tools/: Debug.hs  Debug_Code_To_Doc.hs  Debug_Demo_GHC.hs  Debug_original_ht_gateway_ht.hs
src/gateway/Language/Haskell/Tools/Debug/: LegacyCode.hs  RangeDebugInstances.hs  Types.hs  Utils.hs
src/gateway/exe/: Main.hs
src/refactor/: haskell-tools-refactor.cabal
src/refactor/Language/Haskell/Tools/Refactor/: Prepare.hs  Refactoring.hs
src/refactor/Language/Haskell/Tools/Refactor/Utils/: Extensions.hs
