name:                haskell-tools-cli
version:             1.1.1.0
synopsis:            Command-line frontend for Haskell-tools Refact
description:         Command-line frontend for Haskell-tools Refact. Not meant as a final product, only for demonstration purposes.
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: examples/example-project/*.hs
                  , examples/CppHs/Language/Preprocessor/*.hs
                  , examples/CppHs/Language/Preprocessor/Cpphs/*.hs

library
  build-depends:       base                       
                     , containers                >= 0.5 
                     , mtl                       >= 2.2 
                     , split                     >= 0.2 
                     , directory                 >= 1.2 
                     , filepath                  >= 1.4 
                     , ghc                       
                     , ghc-paths                 >= 0.1 
                     , references                >= 0.3 
                     , strict                    >= 0.3 
                     , haskell-tools-refactor    >= 1.1 
                     , haskell-tools-builtin-refactorings >= 1.1 
                     , haskell-tools-daemon      >= 1.1 
  exposed-modules:     Language.Haskell.Tools.Refactor.CLI
                     , Paths_haskell_tools_cli
  default-language:    Haskell2010


executable ht-refact
  ghc-options:         -rtsopts
  build-depends:       base                       
                     , split                     >= 0.2 
                     , mtl                       >= 2.2 
                     , directory                 >= 1.2  
                     , filepath                  >= 1.4  
                     , optparse-applicative      
                     , haskell-tools-cli
                     , haskell-tools-daemon      >= 1.1 
                     , haskell-tools-builtin-refactorings >= 1.1 
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010

test-suite haskell-tools-cli-tests
  type:                exitcode-stdio-1.0
  ghc-options:         -with-rtsopts=-M2g
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base                       
                     , tasty                     >= 0.11 
                     , tasty-hunit               >= 0.9 
                     , directory                 >= 1.2 
                     , filepath                  >= 1.4 
                     , knob                      >= 0.1 
                     , bytestring                >= 0.10 
                     , haskell-tools-cli
                     , haskell-tools-builtin-refactorings >= 1.1 
  default-language:    Haskell2010

executable ht-test-stackage
  build-depends:       base                       
                     , directory                 >= 1.2 
                     , process                   >= 1.6 
                     , split                     >= 0.2 
                     , filepath                  >= 1.4 
                     , optparse-applicative      
                     , Glob                      >= 0.9 
  ghc-options:         -threaded
  hs-source-dirs:      test-stackage
  main-is:             Main.hs
  default-language:    Haskell2010

benchmark cli-benchmark
  type:                exitcode-stdio-1.0
  ghc-options:         -with-rtsopts=-M2g
  build-depends:       base                       
                     , criterion                 >= 1.1 
                     , time                      >= 1.6 
                     , aeson                     >= 1.0 
                     , directory                 >= 1.2 
                     , filepath                  >= 1.4 
                     , knob                      >= 0.1 
                     , bytestring                >= 0.10 
                     , split                     >= 0.2 
                     , haskell-tools-cli
                     , haskell-tools-builtin-refactorings >= 1.1 
                     , haskell-tools-daemon      >= 1.1 
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  default-language:    Haskell2010
