name:                haskell-tools-gateway
version:             1.1.1.0
synopsis:            Debugging Tools for Haskell-tools
description:         Debugging Tools for Haskell-tools
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Language.Haskell.Tools.Debug
  other-modules:       Language.Haskell.Tools.Debug.DebugGhcAST
                     , Language.Haskell.Tools.Debug.Show
                     , Language.Haskell.Tools.Debug.Utils
                     , Language.Haskell.Tools.Debug.Types
                     , Language.Haskell.Tools.Debug.LegacyCode
                     , Language.Haskell.Tools.Debug.RangeDebug
                     , Language.Haskell.Tools.Debug.RangeDebugInstances
  build-depends:       base                       
                     , filepath                  >= 1.4 && < 1.5
                     , template-haskell           
                     , references                >= 0.3 && < 0.4
                     , split                     >= 0.2 && < 0.3
                     , ghc                       
                     , ghc-paths                 >= 0.1 && < 0.2
                     , haskell-tools-ast         >= 1.1 && < 1.2
                     , haskell-tools-backend-ghc
                     , haskell-tools-refactor    >= 1.1 && < 1.2
                     , haskell-tools-prettyprint >= 1.1 && < 1.2
                     , haskell-tools-builtin-refactorings >= 1.1 && < 1.2
                     , uniplate                  >= 1.6 && < 1.7
                     , classyplate               >= 0.3 && < 0.4
                     , criterion                 >= 1.1 && < 1.6
                     , mtl                       >= 2.2 && < 2.3
                     , ghc-exactprint
                     , strict
                     , Diff
                     , pretty
                     , directory
                     , containers
                     , time
                     , async
                     , aeson
                     , bytestring
                     , unliftio
                     , syb
                     , ghc-boot
  default-language:    Haskell2010

executable ht-gateway
  build-depends:       base                       
                     , haskell-tools-gateway
  hs-source-dirs:      exe
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -qa -n4m -A64m -AL512m" -O2 -j
  main-is:             Main.hs
  default-language:    Haskell2010
